--- a/htmls/event/member.html
+++ b/htmls/event/member.html
@@ -12,7 +12,7 @@
 	<ul class="thumbnails">
 		{% for u in userlist %}
 		<li class="span3">
-			<a href="" class="thumbnail" style="min-height:100px;">
+			<a href="/weibo/she/{{u.get('owner', None)}}/" class="thumbnail" style="min-height:100px;">
 				<div style="float:left; clear:right; margin-right:10px;"><img src="/image/avatar/{{u.get('owner', None)}}_100" style="width:80px;height:80px;" width=80 height=80 /></div>
 				<h3>{{ u.get('nick', None) }}</h3><i style="color:gray;font-size:10px;">{{ u['created'] }}</i>
 			</a>
