--- a/htmls/event/item.html
+++ b/htmls/event/item.html
@@ -45,7 +45,7 @@
 		</div>
 		<form action="/weibo" method="post" id="weiboform">
 			<textarea rows="2" cols="90%" style="width:85%;" name="content" id="weibo-content">#{{ title }}#</textarea>
-			<input type="submit" class="btn-large btn-primary" value="发布" style="margin-top:5px;margin-left:20px;">
+			<input type="submit" class="btn-large" value="发布" style="margin-top:5px;margin-left:20px;">
 			<input type="hidden" name="_xsrf" value="ca61c7cf01cf4097bd14c959c519637a">
 		</form><br/><hr/>
 		<div class="wb_items" maintype="{{ tid }}" subtype="" title="#{{ title }}#">
