--- a/htmls/frame.html
+++ b/htmls/frame.html
@@ -10,15 +10,23 @@
 		<script src="{{ static_url('js/jquery.min.js') }}" type="text/javascript"></script>
 		<script src="{{ static_url('js/jquery.own.js') }}" type="text/javascript"></script>
 		<script src="{{ static_url('js/utility.js') }}" type="text/javascript"></script>
+		<script src="{{ static_url('js/jquery.lazyload.js') }}" type="text/javascript"></script>
 		<script src="{{ static_url('js/jquery.noty.js') }}" type="text/javascript"></script>
 		<script src="{{ static_url('js/alert.js') }}" type="text/javascript"></script>
-		{% block static %}{% end %}
+		<script language="javascript" type="text/javascript">
+			$(document).ready(function() {
+				//$("img").lazyload({});
+				login();
+				reg();
+			})
+		</script>
 		<link href="{{ static_url('css/bootstrap.css') }}" rel="stylesheet">
 		<link href="{{ static_url('css/mybootstrap.css') }}" rel="stylesheet">
 		<link href="{{ static_url('css/doc.css') }}" rel="stylesheet">
 		<link href="{{ static_url('css/ie6.css') }}" rel="stylesheet">
 		<link href="{{ static_url('css/jquery.noty.css') }}" rel="stylesheet">
 		<link rel="shortcut icon" href="./favicon.ico">
+		{% block static %}{% end %}
 	</head>
 	<body data-spy="scroll" data-target=".subnav" data-offset="50">
 		<div class="navbar navbar-fixed-top">
@@ -57,11 +65,7 @@
 							</li>
 							{% else %}
 							<li>
-								<form class="form-inline" style="margin-bottom:5px;" action="/account/login/" method="POST">
-									<input type="text" style="margin-top:5px;" class="input-small" placeholder="Email" name="nick">
-									<input type="password" style="margin-top:5px;" class="input-small" placeholder="Password" name="password">
-									<button type="submit" class="btn">登录</button>
-								</form>
+								<a class="" data-toggle="modal" href="#login" >登录</a>
 							</li>
 							<li class="divider-vertical"></li>
 							<li>
@@ -91,9 +95,6 @@
 				<p></p>
 			</footer>
 		</div><!-- /container -->
-		<!-- Le javascript
-		================================================== -->
-		<!-- Placed at the end of the document so the pages load faster -->
 		<script type="text/javascript" src="{{ static_url('js/bs/widgets.js') }}"></script>
 		<script type="text/javascript" src="{{ static_url('js/bs/prettify.js') }}"></script>
 		<script type="text/javascript" src="{{ static_url('js/bs/bootstrap-alert.js') }}"></script>
@@ -115,11 +116,64 @@
 				<h3>注册</h3>
 			</div>
 			<div class="modal-body">
-				<form action="/account/register/" method="post">
-					<span>&nbsp&nbsp&nbsp绰号：</span><input name="nick" type=text style="width:200px;height:30px;"/><br/>
-					<span>&nbsp&nbsp&nbsp邮件：</span><input name="email" type=text style="width:200px;height:30px;"/><br/>
-					<span>&nbsp&nbsp&nbsp密码：</span><input name="password" type=password style="width:200px;height:30px;"/><br/>
-					&nbsp&nbsp&nbsp&nbsp<input type=submit value="注册"/>
+				<form class="form-horizontal" action="/account/register/" method="post">
+					<fieldset>
+						<div class="control-group">
+							<label class="control-label" for="nick">绰号</label>
+							<div class="controls">
+								<input name="nick" type="text">
+								<span class="help-inline hide">必填</span>
+							</div>
+						</div>
+						<div class="control-group">
+							<label class="control-label" for="email">邮件</label>
+							<div class="controls">
+								<input name="email" type="text">
+								<span class="help-inline hide">必填</span>
+							</div>
+						</div>
+						<div class="control-group">
+							<label class="control-label" for="password">密码</label>
+							<div class="controls">
+								<input name="password" type="password">
+								<span class="help-inline hide">必填</span>
+							</div>
+						</div>
+						<div class="form-actions">
+							<input type="submit" class="btn btn-primary" value="提交"/>
+							<a class="btn pull-right" onclick="$('#register').modal('hide');$('#login').modal();return false;">登录</a>
+						</div>
+					</fieldset>
+				</form>
+			</div>
+		</div>
+		<div id="login" class="modal hide fade">
+			<div class="modal-header">
+				<a class="close" data-dismiss="modal">×</a>
+				<h3>登录</h3>
+			</div>
+			<div class="modal-body">
+				<form class="form-horizontal" action="/account/login/" method="post">
+					<fieldset>
+						<div class="control-group">
+							<label class="control-label" for="nick">绰号</label>
+							<div class="controls">
+								<input name="nick" type="text">
+								<span class="help-inline hide">必填</span>
+							</div>
+						</div>
+						<div class="control-group">
+							<label class="control-label" for="password">密码</label>
+							<div class="controls">
+								<input name="password" type="password">
+								<span class="help-inline hide">必填</span>
+							</div>
+						</div>
+						<div class="form-actions">
+							<a class="btn pull-right" onclick="$('#login').modal('hide');$('#register').modal();return false;">注册</a>
+							<input type="submit" class="btn btn-primary" value="提交"/>
+						</div>
+					</fieldset>
 				</form>
 			</div>
 		</div>
