--- a/htmls/event/approval.html
+++ b/htmls/event/approval.html
@@ -34,10 +34,10 @@
 		<div class="accordion-group">
 			<div class="accordion-heading">
 				<div class="accordion-toggle">
-				<a class="pull-left" style="display:block;width:90%;height:28px;" data-toggle="collapse" data-parent="#accordion" href="#{{ u['id'] }}">
+				<a class="pull-left" style="display:block;width:88%;height:28px;" data-toggle="collapse" data-parent="#accordion" href="#{{ u['id'] }}">
 					{{ u.get('nick', None) }}
 				</a>
-				<button id="btn-{{ u['id'] }}" switch={ 123 }} ajax-kind="{{ u['kind'] }}" ajax-url="/a/toggle/state" data-loading-text="提交中" data-complete-text="已通过" class="btn btn-primary btn-ajax-toggle">通过</button>
+				<button id="btn-{{ u['id'] }}" switch={ 123 }} ajax-kind="{{ u['kind'] }}" autocomplete="off" ajax-url="/a/toggle/state" data-loading-text="提交中" data-complete-text="取消通过" class="btn btn-primary btn-ajax-toggle">通过</button>
 				</div>
 			</div>
 			<div id="{{ u['id'] }}" class="accordion-body collapse" style="height: 0px;">
