--- a/htmls/frame.html
+++ b/htmls/frame.html
@@ -44,7 +44,7 @@
 							<li class="divider-vertical"></li>
 							<li id="nav-weibo" class=""><a href="/weibo/">微博</a></li>
 							<li id="nav-event" class=""><a href="/event/">活动</a></li>
-							<li id="nav-note" style="display:none;"><a href="/note/">游记</a></li>
+							<li id="nav-note" class=""><a href="/note/">游记</a></li>
 							<li id="nav-second" style="display:none;"><a href="/second/">二手</a></li>
 						</ul>
 						<ul class="nav user_log pull-right">
