--- a/htmls/note/index.html
+++ b/htmls/note/index.html
@@ -6,39 +6,77 @@
 			$('#nav-note').addClass("active");
 		})
 	</script>
+	<style type="text/css">
+/*
+.c, .G {
+display: block;
+}
+pre p, pre .p {
+font-size: 13px;
+line-height: 1.62;
+font-family: Arial,Helvetica,sans-serif;
+word-wrap: break-word;
+white-space: pre-wrap;
+}
+.PICR {
+float: right;
+margin-left: 14px;
+}
+.PICL {
+float: left;
+margin-right: 14px;
+}
+.PIC {
+text-align: center;
+margin: 14px 0;
+}
+img {
+max-width: 100%;
+display: block;
+margin: auto;
+border: 1;
+}
+*/
+	</style>
 {% end %}
 {% autoescape None %}
 {% block bodyleft %}
-	{% for n in note_l %}
-		<div class="note">kjsdf
-			<br>sk.dmf.sdms.df./ds,
-			<br>sdmf.dsf.
-			<div class="ll">
-				<table>
-					<tbody>
-						<tr><td><img src="/rUdHkJ2oPvhO4yyq4WNyoQ/x207592482-1.jpg" alt="一片树叶"></td></tr>
-						<tr><td align="center" class="wr pl"><div class="pl" style="text-align:center;">一片树叶</div></td></tr>
-					</tbody>
-				</table>
+	<div class="accordion" id="accordion" style="background:white;">
+		{% for n in note_l %}
+		<div class="accordion-group">
+			<div class="accordion-heading">
+				<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#{{ n['id'] }}">
+					{{ n['title'] }}
+				</a>
 			</div>
-			<br>
-			<div class="ll">
-				<table>
-					<tbody>
-						<tr><td><img src="/_bRZtvzwyleK0x4syRTnQA/x207592482-2.jpg" alt="people"></td></tr>
-						<tr><td align="center" class="wr pl"><div class="pl" style="text-align:center;">people</div></td></tr>
-					</tbody>
-				</table>
+			<div id="{{ n['id'] }}" class="accordion-body collapse" style="height: 0px;">
+				<div class="accordion-inner">
+					{{ n['content'] }}
+				</div>
 			</div>
-			<br>里的担心完全没有了。&lt;h1&gt;妙峰山&lt;/h1&gt;
-			<a rel="nofollow" href="http://www.yuanhang.info" target="_blank">死定了反抗精神力的空间</a>
-			<a rel="nofollow" href="http://www.info" target="_blank">死定了反抗精神空间</a></div>
-		
-	
-	
-		<p>{{ n['content'] }}</p>
-	{% end %}
+		</div>
+		{% end %}
+<div class="c hide">
+	<div class="p">似懂非懂 
+		<div class="PICR"><img src="http://p4.42qu.us/721/944/198576.jpg"></div> 
+		<div class="PICL"><img src="http://p4.42qu.us/721/944/198576.jpg"></div> 
+		<div class="PIC"><img src="http://p4.42qu.us/721/944/198576.jpg"></div> 上的发生地方 
+	</div>
+</div>
+
+	</div>
 {% end %}
 {% block bodyright %}
-	<a class="btn btn-primary" href="/note/write/">写游记</a>
+	<a class="btn btn-primary" onclick="if (!$.cookie('uid')) {$('#login').modal();return false;}return true;" href="/note/write/">写游记</a>
 {% end %}
+
+
+		
+		
+		
+		
+		
+		
+		
+		
+		
