--- a/htmls/event/publish_step_one.html
+++ b/htmls/event/publish_step_one.html
@@ -49,7 +49,7 @@
 {% end %}
 
 {% block bodyleft %}
-	<form class="form-horizontal event-form" method="POST" action="/event/puba/">
+	<form class="form-horizontal event-form" style="background:white;" method="POST" action="/event/puba/">
 		<fieldset>
 			<legend>活动发布---第一步</legend>
 			<div class="control-group">
