--- a/htmls/event/publish_step_two.html
+++ b/htmls/event/publish_step_two.html
@@ -14,8 +14,7 @@
 {% end %}
 
 {% block bodyleft %}
-	<div id="subnavi" class="gybox"><a style="float:left;display:block;">活动信息</a><span style="float:left;display:block;margin:auto 250px;background:#F5F5F5;">报名信息</span><a style="float:left;display:block;">等待审核</a></div>
-	<form class="form-horizontal" method="POST" action="/event/pubb/">
+	<form class="form-horizontal" style="background:white;" method="POST" action="/event/pubb/">
 		<fieldset>
 			<legend>活动发布---第二步</legend>
 			<div class="control-group">
