--- a/htmls/note/index.html
+++ b/htmls/note/index.html
@@ -67,7 +67,7 @@ border: 1;
 	</div>
 {% end %}
 {% block bodyright %}
-	<a class="btn btn-primary" onclick="if (!$.cookie('uid')) {$('#login').modal();return false;}return true;" href="/note/write/">写游记</a>
+	<a class="btn btn-large btn-success" onclick="if (!$.cookie('uid')) {$('#login').modal();return false;}return true;" href="/note/write/">写游记</a>
 {% end %}
 
 
