--- a/htmls/event/approval.html
+++ b/htmls/event/approval.html
@@ -3,11 +3,11 @@
 	<script language="javascript" type="text/javascript">
 		$(document).ready(function() {
 			$('#nav-event').addClass("active");
-			var isFirst = true;
 			$('.btn-toggle').click(function () {
 				var btn = $(this);
 				btn.button('loading');
 				var uncheck = btn.hasClass("btn-primary");
+				var isFirst = !btn.hasClass("first");
 				var url = btn.attr("ajax-url");
 				var args = {};
 				args.owner = btn.attr("id").replace("btn-", "");
@@ -19,10 +19,10 @@
 					}
 					if (isFirst) {
 						btn.button('complete');
-						isFirst = false;
+						btn.addClass('first');
 					} else {
 						btn.button('reset');
-						isFirst = true;
+						btn.removeClass('first');
 					}
 					btn.toggleClass('btn-primary');
 				});
