--- a/htmls/alert/list.html
+++ b/htmls/alert/list.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="{{ static_url('css/alert.css') }}"/>
 {% end %}
 {% block bodyleft %}
-	<table class="table table-condensed" style="background:white;">
+	<table class="table table-condensed bg-white">
 		<thead>
 			<tr>
 				<th>概要</th>
