--- a/htmls/check/event.html
+++ b/htmls/check/event.html
@@ -53,7 +53,7 @@
 			<button class="btn">全部</button>
 		</div>
 	</div>
-	<table class="table table-bordered table-striped">
+	<table class="table table-bordered table-striped bg-white">
 		<thead>
 			<tr>
 				<th>#</th>
