--- a/htmls/event/list.html
+++ b/htmls/event/list.html
@@ -18,7 +18,7 @@
 			</div>
 		</li>
 	</ul>
-	<table class="table table-condensed" style="background:white;">
+	<table class="table table-condensed bg-white">
 		<thead>
 			<tr>
 				<th width=50%>活动名称</th>
