--- a/htmls/event/member.html
+++ b/htmls/event/member.html
@@ -11,10 +11,11 @@
 {% block bodyleft %}
 	<ul class="thumbnails">
 		{% for u in userlist %}
-		<li class="span3">
+		<li class="span3 bg-white">
 			<a href="/weibo/she/{{u.get('owner', None)}}/" class="thumbnail" style="min-height:100px;">
 				<div style="float:left; clear:right; margin-right:10px;"><img src="/image/avatar/{{u.get('owner', None)}}_100" style="width:80px;height:80px;" width=80 height=80 /></div>
 				<h3>{{ u.get('nick', None) }}</h3><i style="color:gray;font-size:10px;">{{ u['created'] }}</i>
+				{% if u['switch'] %}<em style="color:red;">已通过</em>{% end %}
 			</a>
 		</li>
 		{% end %}
