--- a/htmls/event/publish_step_two.html
+++ b/htmls/event/publish_step_two.html
@@ -14,7 +14,7 @@
 {% end %}
 
 {% block bodyleft %}
-	<form class="form-horizontal" style="background:white;" method="POST" action="/event/pubb/">
+	<form class="form-horizontal bg-white" method="POST" action="/event/pubb/">
 		<fieldset>
 			<legend>活动发布---第二步</legend>
 			<div class="control-group">
