--- a/htmls/note/index.html
+++ b/htmls/note/index.html
@@ -41,7 +41,7 @@ border: 1;
 {% end %}
 {% autoescape None %}
 {% block bodyleft %}
-	<div class="accordion" id="accordion" style="background:white;">
+	<div class="accordion bg-white" id="accordion">
 		{% for n in note_l %}
 		<div class="accordion-group">
 			<div class="accordion-heading">
