--- a/htmls/profile/setting_thirdpart.html
+++ b/htmls/profile/setting_thirdpart.html
@@ -7,7 +7,7 @@
 		<li><a href="/account/setting/alert/">消息设置</a></li>
 		<li class="active"><a>账号绑定</a></li>
 	</ul>
-	<form class="form-horizontal row-fluid" name="content-form" method="POST" action="/account/setting/">
+	<form class="form-horizontal row-fluid bg-white" name="content-form" method="POST" action="/account/setting/">
 		<fieldset>
 			<div class="control-group">
 				<label class="control-label" for="textarea">绑定新浪微博:</label>
