--- a/htmls/event/item.html
+++ b/htmls/event/item.html
@@ -39,13 +39,14 @@
 	<link rel="stylesheet" type="text/css" href="{{ static_url('css/weibo.css') }}"/>
 {% end %}
 {% block bodyleft %}
-	<ul class="thumbnails" style="background:white;padding-top:20px;">
+	<h2 class="bg-white" style="text-align:center;">{{ title }}</h2>
+	<ul class="thumbnails bg-white" style="padding-top:20px;">
 		<li class="span4">
 			<a href="#" class="thumbnail">
 				<img width="300" height="300" src="/image/attach/{{logo}}_300"/>
 			</a>
 		</li>
-		<li class="span4">
+		<li class="span5" style="margin-left:8px;color:black;padding:10px 0 0 10px;">
 			<h4>活动信息</h4>
 			<p>发起人：{{ nick }}</p>
 			<p>发布日期：{{ created }}</p>
@@ -54,14 +55,12 @@
 			<p style="display:none;">路线：{{ route }}</p>
 			<p>活动地点：{{ place }}</p>
 			<p>活动开始时间：{{ date }}</p>
+			<p>花费统计：{{ spend_tl }}</p>
+			<p>装备要求：{{ equip }}</p>
+			<p>{% if members %}<a href="">人员配置</a>{% end %}</p>
 		</li>
 		<li class="span8">
 			<p>计划安排：{{ schedule_tl }}</p>
-			<p>花费统计：{{ spend_tl }}</p>
-			<p style="display:none;">装备要求：{{ equip }}</p>
-			<p>{% if declare_tl %}免责声明：{{ declare_tl }}{% end %}</p>
-			<p>{% if attention_tl %}注意事项：{{ attention_tl }}{% end %}</p>
-			<p style="display:none;">人员配置：{{ members }}</p>
 		</li>
 	</ul>
 	<div style="clear:both;"></div>
@@ -94,6 +93,8 @@
 		<p>报名人数：{{ fr }} 到 {{ to }}</p>
 		<p>集合时间：{{ when }}</p>
 		<p>集合地点：<a href="/map/{{ where }}/" target="_blank">点击查看</a></p>
+		<p>{% if declare_tl %}<a href="">免责声明</a>{% end %}</p>
+		<p>{% if attention_tl %}<a href="">注意事项</a>{% end %}</p>
 		<button id="btn-{{ uid }}" class="btn btn-toggle {% if not is_join %}btn-success{% end %}" ajax-url="/a/event/join/" data-loading-text="提交中" data-complete-text="{% if is_join %}参加活动{% else %}退出活动{% end %}">
 			{% if is_join %}退出活动{% else %}参加活动{% end %}
 		</button>
