--- a/htmls/profile/setting.html
+++ b/htmls/profile/setting.html
@@ -32,7 +32,7 @@
 		<li class="hide"><a href="/account/setting/alert/">消息设置</a></li>
 		<li class="hide"><a href="/account/setting/thirdpart/">账号绑定</a></li>
 	</ul>
-	<form class="form-horizontal row-fluid" name="content-form" method="POST" action="/account/setting/">
+	<form class="form-horizontal row-fluid bg-white" name="content-form" method="POST" action="/account/setting/">
 		<fieldset>
 			<div class="control-group">
 				<label class="control-label" for="textarea">名号:</label>
